[gd_scene load_steps=21 format=3 uid="uid://b2xjuunk01ucj"]

[ext_resource type="Script" uid="uid://b3i4tu1ufcku0" path="res://scripts/slime_green.gd" id="1_4522x"]
[ext_resource type="Texture2D" uid="uid://c8unxbnpb58f6" path="res://assets/brackeys_platformer_assets/sprites/slime_green.png" id="1_v76sd"]
[ext_resource type="Script" uid="uid://bxslfqo5oku3g" path="res://scripts/slime_wake_area.gd" id="3_qw3lm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a81h1"]
size = Vector2(10, 11.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgmq4"]
atlas = ExtResource("1_v76sd")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_eki0h"]
atlas = ExtResource("1_v76sd")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_k60sr"]
atlas = ExtResource("1_v76sd")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_57o4m"]
atlas = ExtResource("1_v76sd")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw3lm"]
atlas = ExtResource("1_v76sd")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ui01"]
atlas = ExtResource("1_v76sd")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7f0sk"]
atlas = ExtResource("1_v76sd")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_id3nj"]
atlas = ExtResource("1_v76sd")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4x1x0"]
atlas = ExtResource("1_v76sd")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_git4d"]
atlas = ExtResource("1_v76sd")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbmc8"]
atlas = ExtResource("1_v76sd")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kix7"]
atlas = ExtResource("1_v76sd")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3668s"]
atlas = ExtResource("1_v76sd")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_vcult"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgmq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eki0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k60sr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57o4m")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw3lm")
}],
"loop": false,
"name": &"sleeping",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ui01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7f0sk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_id3nj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x1x0")
}],
"loop": false,
"name": &"take_damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_git4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbmc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kix7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3668s")
}],
"loop": false,
"name": &"wake_up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qw3lm"]
radius = 4.80469

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aelh5"]
size = Vector2(115, 69)

[node name="SlimeGreen" type="CharacterBody2D" groups=["Enemies"]]
collision_layer = 2
script = ExtResource("1_4522x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6.25)
shape = SubResource("RectangleShape2D_a81h1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_vcult")
animation = &"wake_up"
autoplay = "sleeping"

[node name="DamageArea" type="Area2D" parent="." groups=["Enemies"]]
collision_layer = 2
collision_mask = 4
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(0.195313, -6)
shape = SubResource("CircleShape2D_qw3lm")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(5, -6)
target_position = Vector2(10, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-5, -6)
target_position = Vector2(-10, 0)

[node name="AttentionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
input_pickable = false
script = ExtResource("3_qw3lm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttentionArea"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_aelh5")

[node name="JumpCoolDown" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="HitCoolDown" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="DamageArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="AttentionArea" to="AttentionArea" method="_on_body_entered"]
[connection signal="timeout" from="JumpCoolDown" to="." method="_on_jump_time_timeout"]
[connection signal="timeout" from="HitCoolDown" to="." method="_on_hit_cool_down_timeout"]
